[package]
name = "pickpick"
version = "0.2.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version="0.4", features = ["canvas", "tokio", "debug"]}

chrono = "0.4"
regex = "1"

[build-dependencies]
winres = "0.1"
